--- a/reinforcement-learning/visualizer/templates/macros/macros.html
+++ b/reinforcement-learning/visualizer/templates/macros/macros.html
@@ -40,7 +40,7 @@
                      layer_indices, layer_names, layer_name) %}
   {% set snapshot_number = snapshot_numbers[snapshot_idx] %}
   <div id="images">
-    <h4>Visualizer {{ snapshot_number }}, Image {{ img_idx }}, {{ layer_name }}</h4>
+    <h4>Visualizer {{ snapshot_number }}, Image {{ img_idx }}, {{ layer_name }} layer</h4>
     <div>
       Snapshots:
       {% for snapshot_number_item in snapshot_numbers %}
