--- a/reinforcement-learning/visualizer/templates/base.html
+++ b/reinforcement-learning/visualizer/templates/base.html
@@ -1,10 +1,7 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - Tensor Visualizer</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<nav>
-  <h1>Visualizer</h1>
-</nav>
 <section class="content">
   <header>
     {% block header %}{% endblock %}
